# dns-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test_dns_server.py  test_performance.py
.cursor/rules/: source.mdc
config/: default.yaml
docs/: DNS_SERVER_IMPLEMENTATION_PLAN.md  DNS_SERVER_REQUIREMENTS.md
scripts/: dns-server.sh
src/dns_server/: main.py
src/dns_server/cache/: __init__.py  engine.py  entry.py  manager.py  stats.py
src/dns_server/config/: loader.py  schema.py  validators.py
src/dns_server/core/: __init__.py  message.py  performance.py  resolver.py  server.py
src/dns_server/dns_logging/: __init__.py  dns_logger.py  logger.py  manager.py
src/dns_server/web/: __init__.py  api.py  server.py  websocket.py
src/tests/: test_config_loader.py  test_config_schema.py  test_dns_logging.py  test_imports.py  test_phase2.py
web/: index.html
web/css/: dashboard.css
web/js/: charts.js  dashboard.js  websocket.js
